yaml/ghost-deploy.yaml
apiVersion: v1
kind: Service
metadata:
  name: ghost-server
spec:
  ports:
  - port: 80
    targetPort: 2368
  selector:
    app: ghost
    part: http-pod
  clusterIP: None

---
apiVersion: apps/v1
kind: Deployment
metadata:
    name: ghost-http-deploy
spec:
    selector:
      matchLabels: 
        app: ghost
        part: http-pod
    replicas: 1
    strategy:
        type: Recreate
    template:
        metadata:
            labels:
                app: ghost
                part: http-pod
        spec:
            volumes:
                - name: ghost-pod-storage
                  persistentVolumeClaim:
                    claimName: ghost-pod-storage
            containers:
                - name: ghost
                  image: "ghost:3-alpine"
                  ports:
                      - containerPort: 80
                  volumeMounts:
                      - name: ghost-pod-storage
                        mountPath: /var/lib/ghost/content
